sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  for(i <- getNombreValeurs-2 down to 0){return}
}